<resources>
    <string name="app_name">Music App</string>
    <string name="tool_bar_title">MUSIC PLAYER</string>
    <string name="title_activity_home">Music Player</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_equalizer">Equalizer</string>
    <string name="title_nav_settings">Settings</string>
    <string name="title_nav_share_app">Share APP</string>
    <string name="title_sleep_time">Sleep Time</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_nowplaying">Now Playing</string>
    <string name="nav_header_playing_music">Nothing else matter</string>
    <string name="action_settings">Settings</string>


    //tab and fragment title
    <string name="tab_songs">SONGS</string>
    <string name="tab_album">ALBUMS</string>
    <string name="tab_folder">FOLDER</string>
    <string name="tab_playlist">PLAYLIST</string>
    <string name="tab_artist">ARTIST</string>
    <string name="tab_genres">GENRES</string>


    <string-array name="fragment_titles">
        <item>@string/tab_songs</item>
        <item>@string/tab_album</item>
        <item>@string/tab_folder</item>
        <item>@string/tab_playlist</item>
        <item>@string/tab_artist</item>
        <item>@string/tab_genres</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name_item">Nothing else Matter</string>
    <string name="song_artist_item">Unknown</string>
    <string name="song_shuffle_alltitle">Shuffle Alll</string>
    <string name="song_now_title">Now Playing</string>
    <string name="song_now_name">SongName</string>
    <string name="song_now_artist">Artist</string>
    <string name="song_now_startTime">00:00</string>
    <string name="song_now_endTime">00:00</string>
    <string name="text_albumName">AlbumName</string>
    <string name="text_artistname">Artist</string>
    <string name="text_saved_state">Saved State</string>
    <string name="text_notificationchannel">dark-music</string>
    <string name="text_notification_prev">previous</string>
    <string name="text_notification_pause">pause</string>
    <string name="text_notification_next">next</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_album_detail">AlbumDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="text_permission_granted">Permssions granted Successfully</string>
    <string name="text_permission_denied">Permission Denied!Please enable permission from settings to use the app</string>
    <string name="text_permission_message">Allow app to access Storage and Phone state</string>
    <string name="text_permission_submit">Allow</string>
    <string name="folder_name_item">FolderName</string>
    <string name="no_of_songs">Songs</string>
    <string name="text_playlist_create">Create PlayList</string>
    <string name="text_recent_added">Recently Added</string>
    <string name="text_favourites">My Favourites</string>
    <string name="text_last_played">LastPlayed</string>
    <string name="text_create_playList">Create a new playlist</string>
    <string name="text_playlist_name">Playlist Name</string>
    <string name="text_playlist_add">Create</string>
    <string name="text_playlist_cancel">Cancel</string>
    <string name="text_selectSong_count">0</string>
    <string name="text_empty_playlist">Enter playlist name</string>
    <string name="action_search">Search</string>
    <string name="text_title_sleep">Sleep Timer</string>
    <string name="text_sleep_close">Close sleep mode</string>
    <string name="text_sleep_10min">10</string>
    <string name="text_sleep_20min">20</string>
    <string name="text_sleep_30min">30</string>
    <string name="text_sleep_60min">60</string>
    <string name="text_sleep_90min">90</string>
    <string name="text_sleep_120min">120</string>
    <string name="text_sleep_manuel">Manual input</string>
    <string name="text_sleep_min">minutes</string>
    <string name="text_title_equalizer">Equalizer</string>
    <string name="text_equalizer_custom">custom</string>
    <string name="text_equalizer_80hz">80 HZ</string>
    <string name="text_equalizer_230hz">230 HZ</string>
    <string name="text_equalizer_910hz">910 HZ</string>
    <string name="text_equalizer_3600hz">3600 HZ</string>
    <string name="text_equalizer_1400hz">1400 HZ</string>
    <string name="text_equalizer_basss">Bass</string>
    <string name="text_equalizer_3d">3D</string>
    <string name="text_equalizer_14000hz">14000 HZ</string>
    <string name="text_play">Play</string>
    <string name="text_play_next">Next</string>
    <string name="text_playlists_addMenu">Add To Playlist</string>
    <string name="text_details_addMenu">Details</string>
    <string name="text_share_addMenu">Share</string>
    <string name="text_delete_menu">Delete</string>
    <string name="text_create">Create</string>
    <string name="text_playList_song">song</string>
    <string name="song_detail_title">Details</string>
    <string name="song_path">Path :</string>
    <string name="song_size">Size :</string>
    <string name="song_time">Time :</string>
    <string name="song_title">Title</string>
    <string name="song_album">Album</string>
    <string name="song_artist">Artist</string>
    <string name="text_delete_song">Delete Song?</string>
    <string name="text_deleted_message">"Are you sure want to delete "</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">CANCEL</string>
    <string name="no_songs">Playlist is empty</string>
    <string name="title_nosongs">No songs</string>
    <string name="text_delete_playlist">Delete</string>
    <string name="text_notification_close">Close</string>

</resources>