<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <item android:id="@+id/play_pop_menu"
        android:icon="@drawable/ic_play"

        android:title="@string/text_play" />
    <item android:id="@+id/next_pop_menu"
        android:icon="@drawable/ic_play_next"
        android:title="@string/text_play_next"
        />
    <item android:id="@+id/playlist_pop_menu"
        android:icon="@drawable/ic_playlist"
        android:title="@string/text_playlists_addMenu" />


    <item android:id="@+id/detail_pop_menu"
        android:icon="@drawable/ic_info"
        android:title="@string/text_details_addMenu" />




    <item android:id="@+id/share_pop_menu"
        android:icon="@drawable/ic_share"
        android:title="@string/text_share_addMenu" />



    <item android:id="@+id/delete_pop_menu"
        android:icon="@drawable/ic_delete_sweep"
        android:title="@string/text_delete_menu" />





</menu>