<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_nav_home" />
<!--        <item-->
<!--            android:id="@+id/nav_equalizer"-->
<!--            android:icon="@drawable/ic_equalizer"-->
<!--            android:title="Gallery" />-->
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/title_sleep_time" />
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/ic_settings_black_24dp"-->
<!--            android:title="@string/title_nav_settings" />-->


        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/title_nav_share_app" />

    </group>


</menu>
