<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBrown"
        android:layout_gravity="center"
        >


        <TextView
            android:id="@+id/dialogTitle"
            android:padding="16dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_create_playList"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:gravity="left|center"
            android:textSize="18sp"

 />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:id="@+id/name_playlist_editText"

        android:paddingBottom="16dp"
        android:hint="@string/text_playlist_name"
        android:textColorHint="@android:color/darker_gray"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"/>



    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <Button
            android:layout_width="90dp"
            android:id="@+id/create_playlist_button"
            android:text="@string/text_playlist_add"
            android:textSize="12sp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:stateListAnimator="@null"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_border_button"
            android:layout_alignParentRight="true"
            android:layout_height="40dp"/>



        <Button
            android:layout_width="90dp"
            android:textSize="12sp"
            android:id="@+id/cancel_playlist_button"
            android:stateListAnimator="@null"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="120dp"
            android:text="@string/text_playlist_cancel"
            android:layout_toLeftOf="@id/create_playlist_button"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_border_button"
            android:layout_alignParentRight="true"

            android:layout_height="40dp"/>


    </RelativeLayout>
</LinearLayout>