<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"

    tools:context=".ui.more.SongDetailDialogFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginLeft="22dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/song_detail_title"
            android:layout_height="wrap_content"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="0dp"
                android:textSize="14sp"
                android:padding="8dp"
                android:layout_marginLeft="22dp"
                android:layout_weight="1"
                android:textColor="@color/colorLightBrown"
                android:text="@string/song_path"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:textSize="14sp"
                android:layout_marginRight="1dp"
                android:layout_weight="3"
                android:id="@+id/path_moreDetails_textview"
                android:textColor="@color/colorLightBrown"
                android:padding="8dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:textSize="14sp"
                android:layout_marginLeft="22dp"
                android:layout_weight="0.3"
                android:textColor="@color/colorLightBrown"
                android:text="@string/song_size"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_width="0dp"
                android:textSize="14sp"
                android:id="@+id/size_moreDetails_textview"
                android:layout_marginLeft="18dp"
                android:layout_weight="1.8"
                android:textColor="@color/colorLightBrown"
                android:padding="8dp"
                android:layout_height="wrap_content"/>




            <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:padding="8dp"
                android:layout_marginLeft="18dp"
                android:layout_weight="0.1"
                android:textColor="@color/colorLightBrown"
                android:text="@string/song_time"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_width="0dp"
                android:textSize="14sp"
                android:padding="8dp"
                android:layout_marginLeft="18dp"
                android:layout_weight="1.8"
                android:id="@+id/time_moreDetails_textview"
                android:textColor="@color/colorLightBrown"

                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="0dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:layout_marginLeft="22dp"
                android:layout_weight="1"
                android:textColor="@color/colorLightBrown"
                android:text="@string/song_title"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:id="@+id/title_moreDetails_textview"
                android:layout_marginRight="22dp"
                android:layout_weight="3"
                android:textColor="@color/colorLightBrown"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="0dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:layout_marginLeft="22dp"
                android:layout_weight="1"
                android:textColor="@color/colorLightBrown"
                android:text="@string/song_album"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:id="@+id/album_moreDetails_textview"
                android:layout_marginRight="22dp"
                android:layout_weight="3"
                android:textColor="@color/colorLightBrown"
                android:layout_height="wrap_content"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="0dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:layout_marginLeft="22dp"
                android:layout_weight="1"
                android:textColor="@color/colorLightBrown"
                android:text="@string/song_artist"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:id="@+id/artist_moreDetails_textview"
                android:layout_marginRight="22dp"
                android:layout_weight="3"
                android:textColor="@color/colorLightBrown"

                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <TextView
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:id="@+id/cancel_moreDetail_textview"
                android:padding="8dp"
                android:gravity="right"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorLightBlue"
                android:text="@string/text_playlist_cancel"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>






    </ScrollView>

</LinearLayout>